# maven

./: .env.example  .gitignore  README.md  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
apps/api/: project.json  pyproject.toml
apps/api/src/: __init__.py
apps/cli/: README.md  project.json  pyproject.toml
apps/cli/src/: __init__.py  main.py
apps/cli/src/commands/: daemon_cmd.py  index.py  search.py
apps/cli/tests/: test_hello.py
apps/core/: project.json
apps/core/src/: main.py
apps/daemon/: README.md  project.json  pyproject.toml
apps/daemon/daemon/: __init__.py  main.py  server.py  service.py  state.py
apps/daemon/tests/: test_hello.py
apps/ml-backend/: project.json  pyproject.toml
apps/ml-backend/src/: main.py
config/: extensions.yaml  indexer.yaml  retriever.yaml  retriever_config.yaml
libs/agents/: README.md  project.json  pyproject.toml
libs/agents/agents/: __init__.py  agent.py  hello.py
libs/agents/agents/checkpoints/: __init__.py
libs/agents/agents/graphs/: __init__.py  react.py
libs/agents/agents/llm/: __init__.py  factory.py
libs/agents/agents/models/: __init__.py  agents.py  config.py  state.py
libs/agents/tests/: test_hello.py
libs/core/: .coverage  README.md  project.json  pyproject.toml
libs/core/core/: __init__.py  maven_pb2.py  maven_pb2_grpc.py
libs/core/core/actions/: __init__.py  daemon.py  daemon_actions.py  index.py  index_actions.py  search.py  search_actions.py
libs/core/core/adapters/: semantic_search_adapter.py
libs/core/core/models/: actions.py  daemon.py  index.py  launchctl.py  process.py  search.py
libs/core/core/process_manager/: __init__.py  launchctl_manager.py  plist_generator.py  process_controller.py
libs/core/proto/: generate.sh  maven.proto
libs/core/src/: hello.py
libs/core/tests/: test_daemon_actions.py  test_hello.py  test_index_actions.py  test_launchctl_manager.py  test_plist_generator.py  test_process_controller.py  test_search_actions.py
libs/indexer/: README.md  project.json  pyproject.toml
libs/indexer/indexer/: __init__.py  indexer.py
libs/indexer/indexer/chunking/: router.py
libs/indexer/indexer/chunking/adapters/: code.py  text.py
libs/indexer/indexer/chunking/interfaces/: chunker.py
libs/indexer/indexer/embedding/: __init__.py
libs/indexer/indexer/embedding/interfaces/: encoder.py
libs/indexer/indexer/extraction/: router.py
libs/indexer/indexer/extraction/adapters/: code.py  docx.py  pdf.py  text.py
libs/indexer/indexer/extraction/interfaces/: extractor.py
libs/indexer/indexer/extraction/models/: __init__.py  extraction_result.py
libs/indexer/indexer/models/: chunk.py  chunking.py  document.py  document_metadata.py  embedding.py  indexing.py
libs/indexer/indexer/stores/: __init__.py
libs/logging/: README.md  project.json  pyproject.toml
libs/logging/maven_logging/: __init__.py  formatters.py  handlers.py  logger.py
libs/logging/tests/: test_hello.py
libs/ml/: README.md  project.json  pyproject.toml
libs/ml/ml/: hello.py
libs/ml/tests/: test_hello.py
libs/retrieval/: .coverage  .env  README.md  project.json  pyproject.toml
libs/retrieval/retrieval/: __init__.py  hello.py
libs/retrieval/retrieval/adapters/: content_search.py  hybrid_search.py  indexed_content_search.py  semantic_search.py  spotlight.py
libs/retrieval/retrieval/interfaces/: retriever.py
libs/retrieval/retrieval/models/: config.py  search.py
libs/retrieval/retrieval/services/: background_indexer.py  config_manager.py  content_extractor.py  fs_watcher.py  index_manager.py
libs/retrieval/tests/: test_hello.py
libs/tools/: README.md  project.json  pyproject.toml
libs/tools/tests/: test_builtin.py
libs/tools/tools/: registry.py
libs/tools/tools/builtin/: code_analysis.py  file.py  http.py  search.py  shell.py
libs/tools/tools/interfaces/: logger.py
libs/tools/tools/models/: tools.py
reports/apps/api/unittests/: junit.xml
reports/apps/api/unittests/html/: index.html
reports/apps/cli/unittests/: junit.xml
reports/apps/cli/unittests/html/: index.html
reports/apps/daemon/unittests/: junit.xml
reports/apps/daemon/unittests/html/: index.html
reports/libs/core/unittests/: junit.xml
reports/libs/core/unittests/html/: index.html
reports/libs/logging/unittests/: junit.xml
reports/libs/logging/unittests/html/: index.html
reports/libs/retrieval/unittests/: junit.xml
reports/libs/retrieval/unittests/html/: index.html
