[project]
name = "maven"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "agents",
  "cli",
  "daemon",
  "indexer",
  "library",
  "maven-logging",
  "ml",
  "tools"
]

[tool.uv]
dev-dependencies = [ ]

  [tool.uv.workspace]
  members = [ "apps/*", "libs/*", "libs/agents", "libs/ml", "libs/tools" ]

[tool.uv.sources.agents]
workspace = true

[tool.uv.sources.api]
workspace = true

[tool.uv.sources.cli]
workspace = true

[tool.uv.sources.core]
workspace = true

[tool.uv.sources.daemon]
workspace = true

[tool.uv.sources.indexer]
workspace = true

[tool.uv.sources.maven-logging]
workspace = true

[tool.uv.sources.ml]
workspace = true

[tool.uv.sources.retrieval]
workspace = true

[tool.uv.sources.tools]
workspace = true

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "autopep8>=2.3.1",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1"
]
