[tool.coverage.run]
branch = true
source = ["cli"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/apps/cli/html'
 --cov-report xml:'../../coverage/apps/cli/coverage.xml'
 --html='../../reports/apps/cli/unittests/html/index.html'
 --junitxml='../../reports/apps/cli/unittests/junit.xml'
"""

[project]
name = "cli"
version = "1.0.0"
description = "Maven&#39;s cli app"
requires-python = ">=3.9,<4"
readme = 'README.md'
dependencies = [
    "rich>=14.2.0",
    "typer>=0.20.0",
    "retrieval",
    "core",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]

[project.scripts]
maven = "main:main"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
