[tool.coverage.run]
branch = true
source = [ "daemon" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/apps/daemon/html'
 --cov-report xml:'../../coverage/apps/daemon/coverage.xml'
 --html='../../reports/apps/daemon/unittests/html/index.html'
 --junitxml='../../reports/apps/daemon/unittests/junit.xml'
"""

[project]
name = "daemon"
version = "1.0.0"
description = "Maven background daemon service"
requires-python = ">=3.9,<4"
readme = 'README.md'
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "psutil>=5.9.0",
    "retrieval",
    "maven-logging",
    "core",
]

[project.scripts]
maven-daemon = "daemon.main:main"

[tool.hatch.build.targets.wheel]
packages = ["daemon"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
