[tool.coverage.run]
branch = true
source = [ "core" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/libs/core/html'
 --cov-report xml:'../../coverage/libs/core/coverage.xml'
 --html='../../reports/libs/core/unittests/html/index.html'
 --junitxml='../../reports/libs/core/unittests/junit.xml'
"""

[project]
name = "core"
version = "1.0.0"
description = "Maven core package"
requires-python = ">=3.9,<4"
readme = 'README.md'
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
