[tool.coverage.run]
branch = true
source = [ "logging" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/libs/logging/html'
 --cov-report xml:'../../coverage/libs/logging/coverage.xml'
 --html='../../reports/libs/logging/unittests/html/index.html'
 --junitxml='../../reports/libs/logging/unittests/junit.xml'
"""

[project]
name = "maven-logging"
version = "1.0.0"
description = "Maven centralized logging with logfmt format"
requires-python = ">=3.9,<4"
readme = 'README.md'
dependencies = [
    "python-json-logger>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["maven_logging"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
